# rustysecrets-cli

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  errors.rs  input.rs  logger.rs  main.rs  version.rs
src/cmds/: mod.rs  recover.rs  split.rs
tests/: tests.rs
tests/resources/: secret.txt
